working page without media querry

--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -3,34 +3,32 @@
     margin: 0;
     box-sizing: border-box;
 }
-body { 
-    font-family: montserrat;
 
-}
 #header-nav{
     background: #0082e6;
     height: 80px;
     width: 100%;
 }
-#header-nav span{
-    float: left;
-    color: rgb(16, 193, 60);
-    font-size: 35px;
-    font-weight: bold;
-}
 #logo{
     float: left;
-    margin-top: 15px;
+    margin-top: 12px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
 }
 #header-nav span,#header-nav a{
     display: inline-block;
-    float: left;
-    margin-top: 15px;
-    margin-left: 20px;
+    margin-top: 16px;
+    margin-left: 27px;
     font-weight: bold;
+}
+#header-nav span{
+    float: left;
+    color: rgb(16, 193, 60);
+    font-size: 35px;
+    font-weight: bold;
+    margin-left: 7px;
+    margin-right: 22px;
 }
 #header-nav a{
     text-decoration: none;
