--- a/CSS/selectSubject.css
+++ b/CSS/selectSubject.css
@@ -96,6 +96,29 @@
       #ExamContainer{
             float:right;width:84%;height:450px;border-width: 0;overflow:auto;
       }
+      @media (max-width:620px){
+           .Model-btn,.Exit-btn,.btn,.subject,.Exams{
+            font-size: xx-small;
+             } 
+             body{
+                  font-size: x-small;
+             }
+            #left_side_bar{
+            width:22%;
+            }
+            #mainClass,#ExamContainer{
+                  width:78%;  
+            }
+
+      }
+      @media (min-width:620px) and (max-width:820px){
+             #left_side_bar{
+                  width:20%;
+                }
+            #mainClass,#ExamContainer{
+                    width:80%;  
+                }
+      }
 
       
  
