--- a/CSS/ExitAndModel.css
+++ b/CSS/ExitAndModel.css
@@ -4,15 +4,23 @@ fieldset{
 
 .Question{
       width: 86%;
-      height: 150px;
+      height: 75px;
 }
 
 .options,.ans{
       width: 70%;
-      height: 90px;
+      height: 50px;
       border-radius: 1.5%;
       margin-left:1%; 
       margin-top: 1%;  
+}
+@media(max-width:720px){
+      .Question{
+            width: 98%; 
+      }
+      .options,.ans{
+        width: 90%;
+      }  
 }
 
 #upload,#update{
